CPFED-3809: added overflow auto and max height 100vh to mobile accordion menu to fix overlow bug

--- a/elements/pfe-navigation/src/pfe-navigation.scss
+++ b/elements/pfe-navigation/src/pfe-navigation.scss
@@ -291,6 +291,10 @@ See mixin blocks before selectors that contain the selector name and the three l
 .pfe-navigation__menu {
   width: 100%;
   transition: opacity 0.1s ease-out;
+  // added to fix overflow issues on mobile accordion dropdowns
+  overflow: auto;
+  max-height: 100vh;
+
   @include breakpoint('nav-expand') {
     display: flex;
     align-items: stretch;
